--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  max-width: 100vw;
 }
 
 h1 {
